rs/tests/failures/unstable/object_safety.stderr
error[E0038]: the trait `MyTrait` is not dyn compatible
  --> tests/failures/unstable/object_safety.rs:19:14
   |
19 |     let obj: Box<dyn MyTrait> = Box::new(MyType);
   |              ^^^^^^^^^^^^^^^^ `MyTrait` is not dyn compatible
   |
note: for a trait to be dyn compatible it needs to allow building a vtable
      for more information, visit <https://doc.rust-lang.org/reference/items/traits.html#dyn-compatibility>
  --> tests/failures/unstable/object_safety.rs:6:34
   |
1  | trait MyTrait {
   |       ------- this trait is not dyn compatible...
...
6  |     fn with_self_return(self) -> Self; // object-safety: Self in return
   |                                  ^^^^ ...because method `with_self_return` references the `Self` type in its return type
   = help: consider moving `with_self_return` to another trait
   = help: only type `MyType` implements `MyTrait`; consider using it directly instead.

error[E0038]: the trait `MyTrait` is not dyn compatible
  --> tests/failures/unstable/object_safety.rs:19:33
   |
19 |     let obj: Box<dyn MyTrait> = Box::new(MyType);
   |                                 ^^^^^^^^^^^^^^^^ `MyTrait` is not dyn compatible
   |
note: for a trait to be dyn compatible it needs to allow building a vtable
      for more information, visit <https://doc.rust-lang.org/reference/items/traits.html#dyn-compatibility>
  --> tests/failures/unstable/object_safety.rs:6:34
   |
1  | trait MyTrait {
   |       ------- this trait is not dyn compatible...
...
6  |     fn with_self_return(self) -> Self; // object-safety: Self in return
   |                                  ^^^^ ...because method `with_self_return` references the `Self` type in its return type
   = help: consider moving `with_self_return` to another trait
   = help: only type `MyType` implements `MyTrait`; consider using it directly instead.
   = note: required for the cast from `Box<MyType>` to `Box<dyn MyTrait>`

error[E0038]: the trait `MyTrait` is not dyn compatible
  --> tests/failures/unstable/object_safety.rs:23:5
   |
23 |     obj.with_custom_receiver();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^ `MyTrait` is not dyn compatible
   |
note: for a trait to be dyn compatible it needs to allow building a vtable
      for more information, visit <https://doc.rust-lang.org/reference/items/traits.html#dyn-compatibility>
  --> tests/failures/unstable/object_safety.rs:6:34
   |
1  | trait MyTrait {
   |       ------- this trait is not dyn compatible...
...
6  |     fn with_self_return(self) -> Self; // object-safety: Self in return
   |                                  ^^^^ ...because method `with_self_return` references the `Self` type in its return type
   = help: consider moving `with_self_return` to another trait
   = help: only type `MyType` implements `MyTrait`; consider using it directly instead.

error: the `with_self_sized` method cannot be invoked on a trait object
  --> tests/failures/unstable/object_safety.rs:24:9
   |
4  |         Self: Sized; // object-safety: Sized Self
   |               ----- this has a `Sized` requirement
...
24 |     obj.with_self_sized();
   |         ^^^^^^^^^^^^^^^

error[E0038]: the trait `MyTrait` is not dyn compatible
  --> tests/failures/unstable/object_safety.rs:25:5
   |
25 |     obj.with_self_return();
   |     ^^^^^^^^^^^^^^^^^^^^^^ `MyTrait` is not dyn compatible
   |
note: for a trait to be dyn compatible it needs to allow building a vtable
      for more information, visit <https://doc.rust-lang.org/reference/items/traits.html#dyn-compatibility>
  --> tests/failures/unstable/object_safety.rs:6:34
   |
1  | trait MyTrait {
   |       ------- this trait is not dyn compatible...
...
6  |     fn with_self_return(self) -> Self; // object-safety: Self in return
   |                                  ^^^^ ...because method `with_self_return` references the `Self` type in its return type
   = help: consider moving `with_self_return` to another trait
   = help: only type `MyType` implements `MyTrait`; consider using it directly instead.
